k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afrimart
  labels:
    app.kubernetes.io/name: afrimart
    app.kubernetes.io/part-of: afrimart
